snapshots/aws_demo/aws_configs/us-east-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0d72c962b56253239",
     "NetworkAclId": "acl-0a6d3dea4ec392823",
     "SubnetId": "subnet-033702acc23cb08f3"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0a6d3dea4ec392823",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-tgw-hr-east"
    }
   ],
   "VpcId": "vpc-09fbdfd905cb6796d"
  },
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-096adf6d95021c404",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-0ccd2155f545b45f9"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0ca9a5bd2d21c2dca",
     "NetworkAclId": "acl-0ff9cf83b6906f3ea",
     "SubnetId": "subnet-07cf58c252464b559"
    },
    {
     "NetworkAclAssociationId": "aclassoc-01a90a37e9872e44a",
     "NetworkAclId": "acl-0ff9cf83b6906f3ea",
     "SubnetId": "subnet-06f08a16b0b7fe567"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.4.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0ff9cf83b6906f3ea",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-hr-east"
    }
   ],
   "VpcId": "vpc-09fbdfd905cb6796d"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-07798a4f2a40ba14d",
     "NetworkAclId": "acl-02be7ad582af059a3",
     "SubnetId": "subnet-05a2c4fd6af8ce732"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-02be7ad582af059a3",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-tgw-fin-east"
    }
   ],
   "VpcId": "vpc-0ccd2155f545b45f9"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-03a0899fc893c4811",
     "NetworkAclId": "acl-092e6104fd6205a4c",
     "SubnetId": "subnet-0e3b67b96fa52d20d"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-092e6104fd6205a4c",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-09fbdfd905cb6796d"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-018ce9a9421dba99b",
     "NetworkAclId": "acl-08a7a1c3668b7dc2d",
     "SubnetId": "subnet-05ccbf7017afb415c"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0d7add41f397b7c0a",
     "NetworkAclId": "acl-08a7a1c3668b7dc2d",
     "SubnetId": "subnet-081d4cf70d4fa8c98"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-08a7a1c3668b7dc2d",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-fin-east"
    }
   ],
   "VpcId": "vpc-0ccd2155f545b45f9"
  }
 ]
}
