snapshots/aws_demo/aws_configs/us-east-1/SecurityGroups.json
{
 "SecurityGroups": [
  {
   "Description": "default VPC security group",
   "GroupId": "sg-02d171313b8faad49",
   "GroupName": "default",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-02d171313b8faad49",
       "UserId": "028403472736"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "VpcId": "vpc-0ccd2155f545b45f9"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-07812b4b30d1df2eb",
   "GroupName": "terraform-20200422012714052100000003",
   "IpPermissions": [
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "ICMP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 3306,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "MYSQL Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "MYSQL Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "MYSQL Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 3306,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "sg-db-fin-east"
    }
   ],
   "VpcId": "vpc-0ccd2155f545b45f9"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-092ed683d0fb1fa13",
   "GroupName": "terraform-20200422012717536300000004",
   "IpPermissions": [
    {
     "FromPort": 80,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "HTTP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 80,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "ICMP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 443,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "HTTPS Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 443,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "sg-expenses-fin-east"
    }
   ],
   "VpcId": "vpc-0ccd2155f545b45f9"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-0a85bb693afc339ad",
   "GroupName": "terraform-20200422012732466600000007",
   "IpPermissions": [
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "ICMP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 3306,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "MYSQL Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "MYSQL Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "MYSQL Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 3306,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "sg-db-hr-east"
    }
   ],
   "VpcId": "vpc-09fbdfd905cb6796d"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-0b67bf91ffa64d22a",
   "GroupName": "terraform-20200422012738004000000008",
   "IpPermissions": [
    {
     "FromPort": 80,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "HTTP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 80,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "ICMP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 53,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "DNS Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 53,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 3306,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "MYSQL Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 3306,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 443,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "HTTPS Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 443,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "sg-web-hr-east"
    }
   ],
   "VpcId": "vpc-09fbdfd905cb6796d"
  },
  {
   "Description": "default VPC security group",
   "GroupId": "sg-0d6bc40e679b0b28b",
   "GroupName": "default",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-0d6bc40e679b0b28b",
       "UserId": "028403472736"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "VpcId": "vpc-09fbdfd905cb6796d"
  }
 ]
}
